# refmt

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  NEW_FEATURES.md  README.md  clean_file.py  codeconvert  refmt
codeconvert-cli/: Cargo.toml
codeconvert-cli/src/: main.rs
codeconvert-cli/tests/: cli_integration.rs
codeconvert-core/: Cargo.toml
codeconvert-core/src/: case.rs  converter.rs  emoji.rs  lib.rs  rename.rs  whitespace.rs
codeconvert-core/tests/: library_integration.rs
codeconvert-plugins/: Cargo.toml
codeconvert-plugins/src/: lib.rs
docs/: TRAIT_REFACTOR.md  new_features.md
refmt-cli/: Cargo.toml
refmt-cli/src/: main.rs
refmt-cli/tests/: cli_integration.rs
refmt-core/: Cargo.toml
refmt-core/src/: combined.rs  converter.rs  emoji.rs  lib.rs  rename.rs  whitespace.rs
refmt-core/tests/: library_integration.rs
refmt-plugins/: Cargo.toml
refmt-plugins/src/: lib.rs
