[package]
name = "codeconvert-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for codeconvert transformers"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
