[package]
name = "refmt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for text and file reformatting"

[[bin]]
name = "refmt"
path = "src/main.rs"

[dependencies]
refmt-core = { path = "../refmt-core", features = ["parallel"] }
refmt-plugins = { path = "../refmt-plugins" }

clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true

# Logging and UI
log.workspace = true
simplelog.workspace = true
indicatif.workspace = true
logging_timer.workspace = true
