[package]
name = "refmt-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for refmt transformers"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
